--- a/README.Rmd
+++ b/README.Rmd
@@ -34,7 +34,7 @@ Using `qlm_code()`, users can apply codebook-based qualitative coding powered by
 #### `qlm_codebook()`
 - Creates custom codebooks tailored to specific research questions and data types.
 - Uses `instructions` and type specifications from [ellmer](https://ellmer.tidyverse.org/reference/type_boolean.html) to define coding instructions and output structure.
-- **Example codebook objects** (e.g., `data_codebook_sentiment`, `data_codebook_stance`, `data_codebook_ideology`) demonstrate complete workflows for common qualitative coding tasks.
+- Example codebook objects (e.g., `data_codebook_sentiment`, `data_codebook_stance`, `data_codebook_ideology`) demonstrate how to use built-in codebooks for common qualitative coding tasks.
 - Extensible framework allows researchers to define domain-specific coding schemes.
 
 #### `qlm_code()`
@@ -99,8 +99,7 @@ pak::pak("SeraphineM/quallmer")
 
 ## Example use and tutorials
 
-To learn more about how to use the package, please refer to our [step-by-step tutorials](https://seraphinem.github.io/quallmer/articles/getting-started.html) and
-the [example codebook](https://seraphinem.github.io/quallmer/articles/pkgdown/examples/codebook_sentiment.html) illustrating a complete workflow.
+To learn more about how to use the package, please refer to our [step-by-step tutorials](https://seraphinem.github.io/quallmer/articles/getting-started.html).
 
 ## Acknowledgments
 
