--- a/vignettes/pkgdown/tutorials/trail.Rmd
+++ b/vignettes/pkgdown/tutorials/trail.Rmd
@@ -102,11 +102,11 @@ trail1 <- qlm_trail(coded1)
 trail1
 ```
 
-This displays:
-- Run name
-- Parent (if any)
-- Creation timestamp
-- Model used
+The trail displays:
+
+- Run name and parent relationship 
+- Creation timestamp 
+- Model and parameters used 
 
 ### Reconstructing a complete chain
 
@@ -122,11 +122,11 @@ full_trail
 
 The output shows:
 
-- All runs in chronological order
-- Parent-child relationships
-- Model and parameter changes across runs
-- Timestamps for each step
-- Codebook used
+- All runs in chronological order 
+- Parent-child relationships 
+- Model and parameter changes across runs 
+- Timestamps for each step 
+- Codebook used 
 
 
 ## Assessing robustness of downstream analysis
@@ -149,9 +149,10 @@ my_analysis <- function(coded) {
 ```
 
 The analysis function should:
-- Take a `qlm_coded` object as input
-- Return a named list of numeric statistics
-- Each statistic should be a single number (e.g., mean, proportion, correlation)
+
+- Take a `qlm_coded` object as input 
+- Return a named list of numeric statistics 
+- Each statistic should be a single number (e.g., mean, proportion, correlation) 
 
 ### Computing robustness
 
@@ -213,16 +214,17 @@ coded_mini <- qlm_replicate(coded_gpt4o,
                             name = "mini_run")
 
 # 2. Compare inter-rater reliability
+# Score is ordinal (1-5 scale), so use level = "ordinal"
 comparison <- qlm_compare(coded_gpt4o, coded_mini,
-                          by = "score",
-                          level = "nominal")
+                          by = score,
+                          level = "ordinal")
 
 # View the comparison results
 print(comparison)
 
 # 3. Validate against gold standard (if you have one)
 # gold <- data.frame(.id = coded_gpt4o$.id, score = c(2, 3, 1, ...))
-# validation <- qlm_validate(coded_gpt4o, gold = gold, by = "score")
+# validation <- qlm_validate(coded_gpt4o, gold = gold, by = score, level = "ordinal")
 # print(validation)
 ```
 
@@ -232,45 +234,51 @@ print(comparison)
 # Get full provenance trail including comparisons
 full_trail <- qlm_trail(coded_gpt4o, coded_mini, comparison)
 print(full_trail)
-
-# The trail shows parent-child relationships:
-# - gpt4o_run (original)
-# - mini_run (parent: gpt4o_run)
-# - comparison_... (parents: gpt4o_run, mini_run)
 ```
+
+The trail shows: 
+
+- Parent-child relationships between runs 
+- Comparison/validation summaries (level, subjects, raters, etc.) 
+- Complete lineage: gpt4o_run → mini_run → comparison 
 
 ## Exporting and documenting your workflow
 
 You can export your trail for documentation and reproducibility:
 
 ```{r trail-export}
-# Extract the full trail
+# Extract the full trail (metadata only - lightweight)
 trail <- qlm_trail(coded_gpt4o, coded_mini, comparison)
 
 # Save as RDS for archival
 # qlm_trail_save(trail, "my_workflow_trail.rds")
 
+# For complete archival with the actual coded data:
+# trail_complete <- qlm_trail(coded_gpt4o, coded_mini, comparison, include_data = TRUE)
+# qlm_trail_save(trail_complete, "my_workflow_complete.rds")
+
 # Export as JSON for portability
 # qlm_trail_export(trail, "my_workflow_trail.json")
 
-# Generate a human-readable report
-# qlm_trail_report(trail, "my_workflow_report.qmd")
-
-# Include comparison metrics in the report
-# qlm_trail_report(trail, "my_workflow_report.qmd", include_comparisons = TRUE)
-
-# Include both comparisons and validations
+# Generate a comprehensive report
 # qlm_trail_report(trail, "my_workflow_report.qmd",
 #                  include_comparisons = TRUE,
 #                  include_validations = TRUE)
 ```
 
+**When to include data:** 
+
+- Use `include_data = FALSE` (default) for lightweight documentation and lineage tracking 
+- Use `include_data = TRUE` to create a complete archive with all coded results for long-term storage or sharing 
+
 The generated report includes:
 
-- Timeline of all coding runs
-- Model settings and parameters
-- Comparison and validation metrics (if `include_comparisons` or `include_validations` is `TRUE`)
-- System information for reproducibility
+- **Timeline**: All coding runs with timestamps and model settings
+- **Comparisons**: Inter-rater reliability measures (when `include_comparisons = TRUE`)
+  - All relevant measures for the measurement level (alpha, kappa, ICC, etc.)
+- **Validations**: Accuracy metrics against gold standards (when `include_validations = TRUE`)
+  - Level-appropriate metrics (accuracy, precision, recall, kappa, rho, ICC, etc.)
+- **System info**: Package versions and R version for reproducibility
 
 ## Summary
 
